--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,6 @@
 android.useAndroidX=true
 android.enableJetifier=true
-org.gradle.jvmargs=-Xmx1024m
+org.gradle.jvmargs=-Xmx4096m -XX:MaxPermSize=4096m
+org.gradle.daemon=true
+org.gradle.parallel=true
+org.gradle.configureondemand=true
